feat: add MySQL schema and PHP API for assistant